finished 1.21.11 and optimize the code